==> apache/nuttx/arch/arm/src/lpc17xx/lpc17_adc.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <semaphore.h>
#include <errno.h>
#include <assert.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/analog/adc.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "chip/lpc17_syscon.h"
#include "lpc17_gpio.h"
#include "lpc17_adc.h"
#  define CONFIG_LPC17_ADC0_MASK    0x01
#  define CONFIG_LPC17_ADC0_SPS     1000
#  define CONFIG_LPC17_ADC0_AVERAGE 200

static void adc_reset(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;
  irqstate_t flags;
  uint32_t clkdiv;
  uint32_t regval;

  flags = enter_critical_section();

  regval  = getreg32(LPC17_SYSCON_PCONP);
  regval |= SYSCON_PCONP_PCADC;
  putreg32(regval, LPC17_SYSCON_PCONP);

  /* Power up before we access hardware */

  putreg32(ADC_CR_PDN, LPC17_ADC_CR);

  regval  = getreg32(LPC17_SYSCON_PCLKSEL0);
  regval &= ~SYSCON_PCLKSEL0_ADC_MASK;
  regval |= (SYSCON_PCLKSEL_CCLK8 << SYSCON_PCLKSEL0_ADC_SHIFT);
  putreg32(regval, LPC17_SYSCON_PCLKSEL0);

#ifdef CONFIG_LPC17_ADC_BURSTMODE
  clkdiv   = LPC17_CCLK / 3 / 65 / priv->sps;

//putreg32(0x04, LPC17_ADC_INTEN);         /* Enable only last channel interrupt */
  putreg32(0x100, LPC17_ADC_INTEN);        /* Enable only global interrupt */

  putreg32((priv->mask) |                  /* Select channels 0 to 7 on ADC0 */
//         (clkdiv) << 8) |                /* CLKDIV = divisor to make the samples
//                                          * per second conversion rate */
           ((32) << 8) |                   /* CLKDIV = divisor to make the faster
                                            * conversion rate */
           (0 << 16) |                     /* BURST = 0, BURST capture all selected
                                            * channels */
           (1 << 17) |                     /* Reserved bit = 0 */
           (1 << 21) |                     /* PDN = 1, normal operation */
           (1 << 26) | (0 << 25) | (0 << 24) |  /* START = at MAT0 signal */
           (1 << 27),                      /* EDGE = 1 (CAP/MAT signal rising
                                            * trigger A/D conversion) */
           LPC17_ADC_CR);

#else /* CONFIG_LPC17_ADC_BURSTMODE */

  clkdiv   = LPC17_CCLK / 8 / 65 / priv->sps;
  clkdiv <<= 8;
  clkdiv  &= 0xff00;
  putreg32(ADC_CR_PDN | ADC_CR_BURST | clkdiv | priv->mask, LPC17_ADC_CR);

#endif /* CONFIG_LPC17_ADC_BURSTMODE */

  if ((priv->mask & 0x01) != 0)
    {
      lpc17_configgpio(GPIO_AD0p0);
    }

  if ((priv->mask & 0x02) != 0)
    {
      lpc17_configgpio(GPIO_AD0p1);
    }

  if ((priv->mask & 0x04) != 0)
    {
      lpc17_configgpio(GPIO_AD0p2);
    }

  if ((priv->mask & 0x08) != 0)
    {
      lpc17_configgpio(GPIO_AD0p3);
    }

  if ((priv->mask & 0x10) != 0)
    {
      lpc17_configgpio(GPIO_AD0p4);
    }

  if ((priv->mask & 0x20) != 0)
    {
      lpc17_configgpio(GPIO_AD0p5);
    }

  if ((priv->mask & 0x40) != 0)
    {
      lpc17_configgpio(GPIO_AD0p6);
    }

  if ((priv->mask & 0x80) != 0)
    {
      lpc17_configgpio(GPIO_AD0p7);
    }

  leave_critical_section(flags);
}

static int adc_setup(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;
  int i;

  int ret = irq_attach(priv->irq, adc_interrupt, NULL);
  if (ret == OK)
    {
      for (i = 0; i < 8; i++)
        {
          priv->buf[i]   = 0;
          priv->count[i] = 0;
        }

      up_enable_irq(priv->irq);
    }

  return ret;
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  /* Disable ADC interrupts, both at the level of the ADC device and at the
   * level of the NVIC.
   */

  putreg32(0, LPC17_ADC_INTEN);
  up_disable_irq(priv->irq);

  /* Then detach the ADC interrupt handler. */

  irq_detach(priv->irq);
}

static void adc_rxint(FAR struct adc_dev_s *dev, bool enable)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  if (enable)
    {
#ifndef CONFIG_LPC17_ADC_BURSTMODE
#ifdef CONFIG_LPC17_ADC_CHANLIST
      /* Trigger interrupt at the end of conversion on the last A/D channel
       * in the channel list.
       */

      putreg32(ADC_INTEN_CHAN(g_adc_chanlist[CONFIG_LPC17_ADC_NCHANNELS - 1]),
               LPC17_ADC_INTEN);
#else
      /* Trigger interrupt using the global DONE flag. */

      putreg32(ADC_INTEN_GLOBAL, LPC17_ADC_INTEN);
#endif
#else /* CONFIG_LPC17_ADC_BURSTMODE */
      /* Enable only global interrupt */

      putreg32(0x100, LPC17_ADC_INTEN);
#endif /* CONFIG_LPC17_ADC_BURSTMODE */
    }
  else
    {
      putreg32(0, LPC17_ADC_INTEN);
    }
}

static int adc_interrupt(int irq, void *context, FAR void *arg)
{
#ifndef CONFIG_LPC17_ADC_BURSTMODE
#ifdef CONFIG_LPC17_ADC_CHANLIST

  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  uint32_t regval;
  unsigned char ch;
  int32_t value;
  int i;

  regval = getreg32(LPC17_ADC_GDR);
  for (i = 0; i < CONFIG_LPC17_ADC_NCHANNELS; i++)
    {
      ch     = g_adc_chanlist[i];
      regval = getreg32(LPC17_ADC_DR(ch));

      if (regval&ADC_DR_DONE)
        {
          priv->count[ch]++;
          priv->buf[ch] += regval & 0xfff0;

          if (priv->count[ch] >= CONFIG_LPC17_ADC0_AVERAGE)
            {
              value           = priv->buf[ch] / priv->count[ch];
              value         <<= 15;
              adc_receive(priv, ch, value);
              priv->buf[ch]   = 0;
              priv->count[ch] = 0;
            }
        }
    }

  return OK;

#else

  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  uint32_t regval;
  unsigned char ch;
  int32_t value;

  regval               = getreg32(LPC17_ADC_GDR);
  ch                   = (regval >> 24) & 0x07;
  priv->buf[ch]       += regval & 0xfff0;

  priv->count[ch]++;
  if (priv->count[ch] >= CONFIG_LPC17_ADC0_AVERAGE)
    {
      value            = priv->buf[ch] / priv->count[ch];
      value          <<= 15;
      adc_receive(priv, ch, value);
      priv->buf[ch]    = 0;
      priv->count[ch]  = 0;
    }

  return OK;

#endif
#else /* CONFIG_LPC17_ADC_BURSTMODE */

  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  volatile uint32_t regVal, regVal2, regVal3;

  /* Verify that an interrupt has actually occured */

  regVal2 = getreg32(LPC17_ADC_STAT);  /* Read ADSTAT will clear the interrupt flag */
  if ((regVal2) & (1 << 16))
    {
      if ((priv->mask & 0x01) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR0);

#ifdef CONFIG_ADC_DIRECT_ACCESS
          /* Store the data value plus the status bits */

          ADC0Buffer0[0] = regVal;
          ADC0IntDone = 1;
#else /* CONFIG_ADC_DIRECT_ACCESS */
#ifdef CONFIG_ADC_WORKER_THREAD
          /* Store the data value plus the status bits */

          ADC0Buffer0[0] = regVal;
          ADC0IntDone = 1;

#else /* CONFIG_ADC_WORKER_THREAD */
      if ((regVal) & (1 << 31))
        {
          adc_receive(priv, 0, (regVal >> 4) & 0xFFF);
        }

#endif /* CONFIG_ADC_WORKER_THREAD */
#endif /* CONFIG_ADC_DIRECT_ACCESS */
        }

      if ((priv->mask & 0x02) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR1);

#ifdef CONFIG_ADC_DIRECT_ACCESS
          /* Store the data value plus the status bits */

          ADC1Buffer0[0] = regVal;
          ADC0IntDone = 1;

#else /* CONFIG_ADC_DIRECT_ACCESS */
#ifdef CONFIG_ADC_WORKER_THREAD
          /* Store the data value plus the status bits */

          ADC1Buffer0[0] = regVal;
          ADC0IntDone = 1;

#else /* CONFIG_ADC_WORKER_THREAD */
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 1, (regVal >> 4) & 0xFFF);
            }

#endif /* CONFIG_ADC_WORKER_THREAD */
#endif /* CONFIG_ADC_DIRECT_ACCESS */
        }

      if ((priv->mask & 0x04) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR2);

#ifdef CONFIG_ADC_DIRECT_ACCESS
          /* Store the data value plus the status bits */

          ADC2Buffer0[0] = regVal;
          ADC0IntDone = 1;

#else /* CONFIG_ADC_DIRECT_ACCESS */
#ifdef CONFIG_ADC_WORKER_THREAD
          /* Store the data value plus the status bits */

          ADC2Buffer0[0] = regVal;
          ADC0IntDone = 1;

#else /* CONFIG_ADC_WORKER_THREAD */
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 2, (regVal >> 4) & 0xFFF);
            }

#endif /* CONFIG_ADC_WORKER_THREAD */
#endif /* CONFIG_ADC_DIRECT_ACCESS */
        }

      if ((priv->mask & 0x08) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR3);
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 3, (regVal >> 4) & 0xFFF);
            }
        }

      if ((priv->mask & 0x10) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR4);
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 4, (regVal >> 4) & 0xFFF);
            }
        }

      if ((priv->mask & 0x20) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR5);
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 5, (regVal >> 4) & 0xFFF);
            }
        }

      if ((priv->mask & 0x40) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR6);
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 6, (regVal >> 4) & 0xFFF);
            }
        }

      if ((priv->mask & 0x80) != 0)
        {
          regVal = getreg32(LPC17_ADC_DR7);
          if ((regVal) & (1 << 31))
            {
              adc_receive(priv, 7, (regVal >> 4) & 0xFFF);
            }
        }

#ifdef CONFIG_ADC_WORKER_THREAD
      if (ADC0IntDone == 1)
        {
          work_queue(HPWORK, &priv->irqwork, (worker_t)adc_irqworker,
                     (FAR void *)priv, 0);
        }

#endif /* CONFIG_ADC_WORKER_THREAD */
    }

  regVal3 = getreg32(LPC17_ADC_GDR); /* Read ADGDR clear the DONE and OVERRUN bits */
  putreg32((priv->mask) |            /* Select channels 0 to 7 on ADC0 */
           (32 << 8) |               /* CLKDIV = 16 */
           (0 << 16) |               /* BURST = 1, BURST capture all selected channels */
           (1 << 17) |               /* Reserved bit = 0 */
           (1 << 21) |               /* PDN = 1, normal operation */
           (1 << 26) | (0 << 25) | (0 << 24) |  /* START = at MAT0 signal */
           (1 << 27),                /* EDGE = 1 (CAP/MAT signal rising trigger A/D
                                      * conversion) */
           LPC17_ADC_CR);

//lpc17_gpiowrite(LPCXPRESSO_GPIO0_21, 0); /* Reset pin P0.21 */
//leave_critical_section(saved_state);
  return OK;
#endif /* CONFIG_LPC17_ADC_BURSTMODE */
}

FAR struct adc_dev_s *lpc17_adcinitialize(void)
{
  return &g_adcdev;
}
